* missing element fix

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 	<body>
 		<div id="main">
 			<h1 style="font-size: 250%">Aktueller AQI an der CDSC</h1>
+
+			<div id="time" style="display: none"></div>
 			<table class="border">
 				<tr id="AQI25tr" class="bg" style="display: none">
 					<td>
