--- a/kiosk.html
+++ b/kiosk.html
@@ -15,22 +15,21 @@
 		<link rel="prefetch" href="images/cc0000.png" />
 		<link rel="prefetch" href="images/674ea7.png" />
 		<link rel="prefetch" href="images/000000.png" />
-		<link rel="stylesheet" type="text/css" href="style.css?v=1.2" />
+		<link rel="stylesheet" type="text/css" href="style.css?v=1.3" />
 		<link id="ico" rel="shortcut icon" href="images/icon.png" />
 		<script src="js/localforage.min.js"></script>
-		<script src="js/aqi.js"></script>
+		<script src="js/aqi.js?v=1.3"></script>
 		<script type="text/javascript">
 			async function displayData() {
 				document.getElementById("time").innerHTML = await localforage.getItem("time");
 
 				document.getElementById("AQIkiosk").innerHTML = await localforage.getItem("AQIkiosk");
-				document.getElementById("AQItr").style.backgroundColor = await localforage.getItem("AQItr.style.backgroundColor");
-				document.getElementById("body").style.color = await localforage.getItem("AQItr.style.color");
+				setColor(await localforage.getItem("AQI"), "AQItr");
+				setColor(await localforage.getItem("AQI"), "body");
 
 				document.getElementById("action").innerHTML = await localforage.getItem("action");
-				document.getElementById("action").style.textAlign = await localforage.getItem("action.style.textAlign");
-				document.getElementById("action").style.paddingLeft = await localforage.getItem("action.style.paddingLeft");
-				document.getElementById("action").style.fontSize = await localforage.getItem("action.style.fontSize");
+				setStyle(await localforage.getItem("AQI"));
+				setFontSize(await localforage.getItem("AQI"));
 			}
 
 			localforage.clear();
