--- a/kiosk.html
+++ b/kiosk.html
@@ -48,10 +48,10 @@
 		</div>
 	</body>
 	<script type="text/javascript">
-		//window.onload = chart();
-		//setInterval(chart, 60000);
+		//getCDSCData(true);
+		//setInterval(getCDSCData, 60000);
 
-		getCDSCData(true);
-		setInterval(getCDSCData, 60000);
+		getData(true);
+		setInterval(getData, 60000);
 	</script>
 </html>
