* improved code to load CDSC values quicker without waiting for the other stations * little code refactoring

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					</tr>
 				</table>
 			</div><br>
-			<div id="aPinat" style="color: white; text-align: left; font-size: 150%"><i>&#8211; aPinat</i></div>
+			<!-- <div id="aPinat" style="color: white; text-align: left; font-size: 150%"><i>&#8211; aPinat</i></div> -->
 		</div>
 		<div id="infobox">
 			<div id="info-content">
