--- a/kiosk.html
+++ b/kiosk.html
@@ -44,7 +44,7 @@
 				</tr>
 
 			</table>
-			<div id="aPinat" style="color: black; position: absolute; bottom: 10px; left: 25px; font-size: 200%"><i>&#8211; aPinat</i></div>
+			<!-- <div id="aPinat" style="color: black; position: absolute; bottom: 10px; left: 25px; font-size: 200%"><i>&#8211; aPinat</i></div> -->
 		</div>
 	</body>
 	<script type="text/javascript">
