* removed GIS block since they removed their sds011 station

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 			<br>
 			<canvas id="ChartCDSC" height="100"></canvas>
 			<br>
-			<div id="GISzeit">Laden...</div><br>
-			<table class="border">
+			<div id="GISzeit" class="hidden">Laden...</div><br>
+			<table class="border hidden">
 				<tr>
 					<td class="bg" style="width: 50%;">
 						<div class="text">PM2.5 GIS</div>
