--- a/index.html
+++ b/index.html
@@ -17,154 +17,36 @@
 		<link rel="prefetch" href="images/000000.png" />
 		<link rel="stylesheet" type="text/css" href="style.css?v=1.3" />
 		<link id="ico" rel="shortcut icon" href="images/icon.png" />
-		<script src="js/Chart.bundle.min.js"></script>
-		<script src="js/localforage.min.js"></script>
-		<script src="js/aqi.js?v=1.6"></script>
+		<script src="js/aqi.js"></script>
 	</head>
-
-	<body>
-		<div id="main">
-			<h1 style="font-size: 250%">Aktueller AQI an der CDSC</h1>
-
-			<div id="time" style="display: none"></div>
-			<table class="border">
-				<tr id="AQItr" class="bg" style="font-size: 200%">
-					<td>
-						<div class="text">AQI<button id="openInfo">i</button></div>
-						<div id="AQI">Laden...</div>
+	<body style="background: white;" id="body">
+		<div id="kiosk">
+			<table style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; height: 100%; width: 100%">
+				<tr id="AQItr" class="bg" style="height: 100%">
+					<td style="width: 50%; font-size: 750%">
+						<div class="text">AQI</div>
+						<div id="AQIkiosk">Laden...</div>
+					</td>
+					<td style="width: 50%">
+						<div class="text" style="font-size: 400%">Maßnahmen</div>
+						<div id="action" style="font-size: 250%"><br><br>Laden...</div>
 					</td>
 				</tr>
 			</table>
-			<br>
-			<br>
-			<div id="CDSCzeit">Laden...</div><br>
-			<table class="border">
+			<table style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; height: 100%; width: 100%">
 				<tr>
-					<td class="bg" style="width: 50%;">
-						<div class="text">PM2.5 CDSC</div>
-						<div id="CDSCpm25">Laden...</div>
+					<td style="width: 50%;">
+						<div id="time" style="text-align: center; font-size: 125%; padding-bottom: 95%">Laden...</div>
 					</td>
-					<td id="AQI25CDSC" class="bg">
-						<div class="text">AQI PM2.5 CDSC</div>
-						<div id="CDSCaqi25">Laden...</div>
+					<td style="width: 50%;">
 					</td>
 				</tr>
-				<tr>
-					<td class="bg">
-						<div class="text">PM10 CDSC</div>
-						<div id="CDSCpm10">Laden...</div>
-					</td>
-					<td id="AQI10CDSC" class="bg">
-						<div class="text">AQI PM10 CDSC</div>
-						<div id="CDSCaqi10">Laden...</div>
-					</td>
-				</tr>
-			</table>
-			<br>
-			<canvas id="ChartCDSC" height="100"></canvas>
-			<br>
-			<div id="GISzeit" class="hidden">Laden...</div><br>
-			<table class="border hidden">
-				<tr>
-					<td class="bg" style="width: 50%;">
-						<div class="text">PM2.5 GIS</div>
-						<div id="GISpm25">Laden...</div>
-					</td>
-					<td id="AQI25GIS" class="bg">
-						<div class="text">AQI PM2.5 GIS</div>
-						<div id="GISaqi25">Laden...</div>
-					</td>
-				</tr>
-				<tr>
-					<td class="bg">
-						<div class="text">PM10 GIS</div>
-						<div id="GISpm10">Laden...</div>
-					</td>
-					<td id="AQI10GIS" class="bg">
-						<div class="text">AQI PM10 GIS</div>
-						<div id="GISaqi10">Laden...</div>
-					</td>
-				</tr>
-			</table>
-			<br>
 
-			<div id="36zeit">Laden...</div><br>
-			<table class="border">
-				<tr>
-					<td class="bg" style="width: 50%">
-						<div class="text">PM2.5 36t</div>
-						<div id="36pm25">Laden...</div>
-					</td>
-					<td id="AQI2536" class="bg">
-						<div class="text">AQI PM2.5 36t</div>
-						<div id="36aqi25">Laden...</div>
-					</td>
-				</tr>
-				<tr>
-					<td class="bg">
-						<div class="text">PM10 36t</div>
-						<div id="36pm10">Laden...</div>
-					</td>
-					<td id="AQI1036" class="bg">
-						<div class="text">AQI PM10 36t</div>
-						<div id="36aqi10">Laden...</div>
-					</td>
-				</tr>
 			</table>
-			<br>
-			<hr>
-			<div id="Quelle">
-				<table>
-					<tr>
-						<td id="links"><b>Quelle PM2.5/PM10 Werte</b>: <br><a href="data/cdsc.json" target="_blank">CDSC</a>, <a href="http://aq.ajosoft.com/index.php?StationID=2052" target="_blank">GIS</a>, <a href="http://aqmthai.com/public_report.php?lang=en" target="_blank">36t</a></td>
-						<td id="rechts"><b>Quelle AQI Berechnung</b>: <a href="http://www3.epa.gov/pm/2012/decfsstandards.pdf" target="_blank">EPA</a>/<a href="https://en.wikipedia.org/wiki/Air_quality_index#Computing_the_AQI" target="_blank">Wikipedia</a></td>
-					</tr>
-				</table>
-			</div><br>
-			<!-- <div id="aPinat" style="color: white; text-align: left; font-size: 150%"><i>&#8211; aPinat</i></div> -->
-		</div>
-		<div id="infobox">
-			<div id="info-content">
-				<div id="info-header">
-					<span id="close">&times;</span>
-					<i><h2 id="colordesc">Laden...</h2></i>
-				</div>
-				<div id="info-body">
-					<p id="action">Laden...</p>
-				</div>
-				<div id="info-footer">
-					<div id="actionextra">
-						Laden...
-					</div>
-				</div>
-			</div>
-
 		</div>
 	</body>
 	<script type="text/javascript">
-		var modal = document.getElementById('infobox');
-		var btn = document.getElementById("openInfo");
-		var span = document.getElementById("close");
-
-		btn.onclick = function() {
-			modal.style.display = "block";
-		}
-
-		span.onclick = function() {
-			modal.style.display = "none";
-		}
-
-		window.onclick = function(event) {
-			if (event.target == modal) {
-				modal.style.display = "none";
-			}
-		}
-	</script>
-	<script type="text/javascript">
-		window.onload = chart();
-		setInterval(chart, 60000);
-
-		getData();
-		setInterval(getData, 60000);
+		getData(true);
+		setInterval(function(){getData(true)}, 60000);
 	</script>
 </html>
