--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 		<div id="kiosk">
 			<table style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; height: 100%; width: 100%">
 				<tr id="AQItr" class="bg" style="height: 100%">
-					<td style="width: 50%; font-size: 750%">
-						<div class="text">AQI</div>
-						<div id="AQIkiosk">Laden...</div>
+					<td style="width: 50%;">
+						<!-- <div class="text">AQI</div> -->
+						<div class="aqi" id="AQIkiosk">Laden...</div>
+						<div class="pm" id="pm25"></div>
 					</td>
 					<td style="width: 50%">
 						<div class="text" style="font-size: 400%">Maßnahmen</div>
