--- a/index.html
+++ b/index.html
@@ -1,53 +1,63 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Aktueller AQI an der CDSC</title>
-		<meta charset="utf-8" />
-		<meta name="msapplication-TileColor" content="#E59866" />
-		<meta name="msapplication-square150x150logo" content="images/icon.png" />
-		<link rel="prefetch" href="style.css?v=1.2" />
-		<link rel="prefetch" href="images/gras.jpg" />
-		<link rel="prefetch" href="images/icon.png" />
-		<link rel="prefetch" href="images/00ff00.png" />
-		<link rel="prefetch" href="images/ffff00.png" />
-		<link rel="prefetch" href="images/ff9900.png" />
-		<link rel="prefetch" href="images/ff0000.png" />
-		<link rel="prefetch" href="images/cc0000.png" />
-		<link rel="prefetch" href="images/674ea7.png" />
-		<link rel="prefetch" href="images/000000.png" />
-		<link rel="stylesheet" type="text/css" href="style.css?v=1.3" />
-		<link id="ico" rel="shortcut icon" href="images/icon.png" />
-		<script src="js/aqi.js"></script>
-	</head>
-	<body style="background: white;" id="body">
-		<div id="kiosk">
-			<table style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; height: 100%; width: 100%">
-				<tr id="AQItr" class="bg" style="height: 100%">
-					<td style="width: 50%;">
-						<!-- <div class="text">AQI</div> -->
-						<div class="aqi" id="AQIkiosk">Laden...</div>
-						<div class="pm" id="pm25"></div>
-					</td>
-					<td style="width: 50%">
-						<div class="text" style="font-size: 400%">Maßnahmen</div>
-						<div id="action" style="font-size: 250%"><br><br>Laden...</div>
-					</td>
-				</tr>
-			</table>
-			<table style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; height: 100%; width: 100%">
-				<tr>
-					<td style="width: 50%;">
-						<div id="time" style="text-align: center; font-size: 125%; padding-bottom: 95%">Laden...</div>
-					</td>
-					<td style="width: 50%;">
-					</td>
-				</tr>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Aktueller AQI an der CDSC</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link href="style.css" rel="stylesheet">
+        <link rel="prefetch" href="images/icon.png" />
+        <link rel="prefetch" href="images/00ff00.png" />
+        <link rel="prefetch" href="images/ffff00.png" />
+        <link rel="prefetch" href="images/ff9900.png" />
+        <link rel="prefetch" href="images/ff0000.png" />
+        <link rel="prefetch" href="images/cc0000.png" />
+        <link rel="prefetch" href="images/674ea7.png" />
+        <link rel="prefetch" href="images/000000.png" />
+        <link id="ico" rel="shortcut icon" href="images/icon.png" />
+        <script src="js/aqi.js"></script>
+    </head>
+    <body id="body">
+    <div class="d-flex flex-column min-vh-100 justify-content-center">
+        <div class="row align-items-center">
+            <div class="col-md-6 text-center">
+                <h5 class="m-2" id="time"></h5>
+                <h1 class="very-big fw-bold" id="AQIkiosk">AQI...</h1>
+                <div class="fst-italic m-3" id="pm25"></div>
+            </div>
+            <div class="col-md-6">
+                 <div id="action"></div>
+            </div>
+        </div>
+    </div>
+        <!-- <div id="kiosk">
+            <table style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; height: 100%; width: 100%">
+                <tr id="AQItr" class="bg" style="height: 100%">
+                    <td style="width: 50%;">
+                        <div class="aqi" id="AQIkiosk">Laden...</div>
+                        <div class="pm" id="pm25"></div>
+                    </td>
+                    <td style="width: 50%">
+                        <div class="text" style="font-size: 400%">Maßnahmen</div>
+                        <div id="action" style="font-size: 250%"><br><br>Laden...</div>
+                    </td>
+                </tr>
+            </table>
+            <table style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; height: 100%; width: 100%">
+                <tr>
+                    <td style="width: 50%;">
+                        <div id="time" style="text-align: center; font-size: 125%; padding-bottom: 95%">Laden...</div>
+                    </td>
+                    <td style="width: 50%;">
+                    </td>
+                </tr>
 
-			</table>
-		</div>
-	</body>
-	<script type="text/javascript">
-		getData(true);
-		setInterval(function(){getData(true)}, 60000);
-	</script>
+            </table>
+        </div> -->
+    <script type="text/javascript">
+        getData(true);
+        setInterval(function(){getData(true)}, 60000);
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </body>
 </html>
